--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="fundo">
         <div class="calculadora">
-            <p id="resultado"></p>
+            <p id="resultado">11111</p>
             <table>
                 <tr>
                     <td><button>C</button></td>
@@ -34,10 +34,10 @@
                     <td><button>1</button></td>
                     <td><button>2</button></td>
                     <td><button>3</button></td>
-                    <td rowspan="2"><button>=</button></td>
+                    <td rowspan="2"><button class="botao_igual">=</button></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button>0</button></td>
+                    <td colspan="2"><button class="botao_zero">0</button></td>
                     <td><button >.</button></td>
                 </tr>
             </table>
